minor fix on gui